samples/_failures_safe/1761486133_4d5d2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1740e940.c: In function ‘display_stats’:
./samples/SAFE/__tmp_1740e940.c:145:11: error: expected ‘;’ at end of input
  145 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_1740e940.c:145:5: error: expected declaration or statement at end of input
  145 |     printf
      |     ^~~~~~
